Wintermodus mit RollerLadeleistung gekoppelt und besser in UI sichtbar gemacht

--- a/sd-karteninhalt/index.html
+++ b/sd-karteninhalt/index.html
@@ -492,7 +492,7 @@
 				color: #666;
 				font-size: 0.9rem;
 				padding-top: 0.2rem;
-				border: solid 0.2rem #CCC;
+				border: solid 0.2rem #666;
 				border-radius: 1rem;
 			}
 			.schalter button {
