--- a/sd-karteninhalt/index.html
+++ b/sd-karteninhalt/index.html
@@ -489,10 +489,10 @@
 				width: 9rem;
 				height: 1.2rem;
 				text-align: center;
-				color: #666;
+				color: black;
 				font-size: 0.9rem;
 				padding-top: 0.2rem;
-				border: solid 0.2rem #666;
+				border: solid 0.2rem black;
 				border-radius: 1rem;
 			}
 			.schalter button {
@@ -507,7 +507,7 @@
 			}
 	.keller_klima {
 		text-align: center;
-		font-size: 2rem;
+		font-size: 1.5rem;
 	}
 		.keller_klima span {
 			display: inline-block;
