Ladeverhalten-Benamung korrigiert

--- a/sd-karteninhalt/index.html
+++ b/sd-karteninhalt/index.html
@@ -560,7 +560,7 @@
 <table class="balkentabelle" id="balkenanzeige"></table>
 
 <div class="schalter" id="auto_laden">
-	<div class="label" onclick="secure_action('change', 'ladeverhalten', 'sommer_winter')">
+	<div class="label" onclick="secure_action('change', 'auto', 'ladeverhalten')">
 		Auto
 		<!--span class="ladeleistung" id="auto_ladeleistung"></span-->
 		<div class="ladeverhalten" id="auto_ladeverhalten"></div>
@@ -568,7 +568,7 @@
 	<button onclick="refresh('change', 'auto', this.className == 'on' ? 'solar' : 'force', this)">&#9889;</button>
 </div>
 <div class="schalter" id="roller_laden">
-	<div class="label" onclick="secure_action('change', 'roller', 'change_power')">
+	<div class="label" onclick="secure_action('change', 'roller', 'ladeleistung')">
 		Roller
 		<!--span class="ladeleistung" id="roller_ladeleistung"></span-->
 		<div class="ladeverhalten" id="roller_ladeort"></div>
