--- a/sd-karteninhalt/index.html
+++ b/sd-karteninhalt/index.html
@@ -122,11 +122,15 @@
 
 			_setze_ladewunsch('auto_laden', daten['auto_laden'], daten['timestamp']);
 			// document.getElementById('auto_ladeleistung').innerHTML = daten['auto_benoetigte_ladeleistung_in_w'] + " W";
-			document.getElementById('auto_ladeverhalten').innerHTML = daten['auto_ladeverhalten_wintermodus'] ? "&#10052;&nbsp;Nachts" : "&#9728;&nbsp;Sonne";
+			document.getElementById('auto_ladeverhalten').innerHTML = daten['auto_ladeverhalten_wintermodus'] ? "&#9790;+&#9728;&nbsp;Nacht" : "&#9728;&nbsp;Sonne";
 
 			_setze_ladewunsch('roller_laden', daten['roller_laden'], daten['timestamp']);
 			// document.getElementById('roller_ladeleistung').innerHTML = daten['roller_benoetigte_ladeleistung_in_w'] + " W";
-			document.getElementById('roller_ladeort').innerHTML = daten['roller_ladeverhalten_wintermodus'] ? "&#10052;&nbsp;Keller" : "&#9728;&nbsp;Au&szlig;en";
+			document.getElementById('roller_ladeort').innerHTML =
+				(daten['auto_ladeverhalten_wintermodus'] ? "&#9790;+&#9728;" : "&#9728;")
+				+ '&nbsp;'
+				+ (daten['roller_ladeverhalten_wintermodus'] ? "Keller" : "Au&szlig;en")
+			;
 
 			document.getElementById('verbrennen').className = daten['verbrennen'] ? 'on' : 'off';
 			document.getElementById('verbrennen').getElementsByClassName('ladestatus')[0].innerHTML = daten['verbrennen'] ? "an" : "aus";
@@ -490,7 +494,7 @@
 				line-height: 4.5rem;
 			}*/
 			.schalter .ladeverhalten {
-				font-size: 1.8rem;
+				font-size: 1.7rem;
 			}
 			.schalter button {
 				border-radius: 1rem;
