--- a/sd-karteninhalt/index.html
+++ b/sd-karteninhalt/index.html
@@ -474,20 +474,22 @@
 			text-align: right;
 			margin-top: 0.5rem;
 			position: relative;
-			padding-right: 2rem;
 		}
 			.schalter .label {
 				position: absolute;
 				top: 0rem;
 				left: 0rem;
-				width: 9.0rem;
-				text-align: right;
+				width: 90%;
+				text-align: left;
 				font-size: 2.5rem;
 				font-weight: bold;
 				border: solid 0.2rem #666;
+				border-right: none;
 				border-radius: 1rem;
-				padding: 0 0.5rem;
-				height: 5.7rem;
+				padding-top: 0.2rem;
+				padding-left: 0.5rem;
+				height: 5.45rem;
+				z-index: -1;
 			}
 			/*.schalter .ladeleistung {
 				font-size: 1.8rem;
