Kindle und alle anderen unterschiedlich behandelt

--- a/sd-karteninhalt/index.html
+++ b/sd-karteninhalt/index.html
@@ -316,6 +316,11 @@
 				--mitteldunkel: #090;
 				--dunkel: #0F0;
 			}
+			body {
+				max-width: 30rem;
+				margin-left: auto;
+				margin-right: auto;
+			}
 		}
 		html.ersatzstrom {
 			font-size: 0.8rem;
