Lastabwurf verbessert; Doku angepasst

--- a/sd-karteninhalt/index.html
+++ b/sd-karteninhalt/index.html
@@ -517,6 +517,8 @@
 			.zusatzinfo > .schutz {
 				border: solid 0.2rem #000;
 				border-color: var(--dunkel);
+				padding-right: 0.3rem;
+				padding-left: 0.3rem;
 			}
 
 		.schalter {
