--- a/sd-karteninhalt/index.html
+++ b/sd-karteninhalt/index.html
@@ -8,7 +8,6 @@
 		var warte_auf_daten = false;
 		var zeitpunkt_letzte_daten = null;
 		var user_aktionen = [];
-		var secure_action_list = [];
 		setInterval(function() {
 			if(
 				zeitpunkt_letzte_daten
@@ -61,33 +60,6 @@
 						warte_auf_daten = false;
 					});
 				}
-			}
-		}
-		function secure_action(action, key, val) {
-			var now = Math.round(new Date().getTime() / 1000);
-			var tmp_list = [];
-			var last_action_time = 0;
-			for(var i = 0; i < secure_action_list.length; i++) {
-				if(
-					secure_action_list[i].time < now - 20
-					|| action != secure_action_list[i].action
-					|| key != secure_action_list[i].key
-					|| val != secure_action_list[i].val
-				) {
-					continue;
-				}
-				last_action_time = secure_action_list[i].time;
-				tmp_list.push(secure_action_list[i]);
-			}
-			if(last_action_time - now == 0) {
-				return;
-			}
-			tmp_list.push({action: action, key: key, val: val, time: now});
-			secure_action_list = tmp_list;
-
-			if(secure_action_list.length >= 5) {
-				secure_action_list = [];
-				refresh(action, key, val);
 			}
 		}
 		function _fuehre_aktion_aus(key, val, done_func) {
@@ -634,7 +606,7 @@
 	<button onclick="refresh('change', 'auto', this.className == 'on' ? 'solar' : 'force', this)">&#9889;</button>
 </div>
 <div class="schalter" id="roller_laden">
-	<div class="label" onclick="secure_action('change', 'roller', 'ladeleistung')">
+	<div class="label">
 		Roller
 		<!--span class="ladeleistung" id="roller_ladeleistung"></span-->
 		<div class="ladeverhalten" id="roller_ladeort"></div>
