--- a/sd-karteninhalt/index.html
+++ b/sd-karteninhalt/index.html
@@ -124,7 +124,7 @@
 			
 			document.getElementById('heizung_temperatur_differenz').innerHTML = daten['heizung_temperatur_differenz'];
 			document.getElementById('heizstab_erlaubt').className = daten['heizstab_erlaubt'] ? 'on' : 'off';
-			document.getElementById('heizstab_erlaubt').getElementsByClassName('ladestatus')[0].innerHTML = daten['heizstab_erlaubt'] ? 'ja' : 'nein';
+			document.getElementById('heizstab_erlaubt').getElementsByClassName('ladestatus')[0].innerHTML = daten['heizstab_erlaubt'] ? 'erlaubt' : 'aus';
 		}
 		function _setze_ladewunsch(id, typ, timestamp) {
 			var el = document.getElementById(id).getElementsByTagName("button")[0];
@@ -597,7 +597,7 @@
 		HEIZUNG
 		<br><span class="ladestatus">-</span>
 	</span>
-	<span id="heizstab">
+	<span id="heizstab_erlaubt">
 		HEIZSTAB
 		<br><span class="ladestatus">-</span>
 	</span>
