WR hat nach dem Update chunked genutzt; WebReader angepasst und offizielle API begonnen zu nutzen

--- a/sd-karteninhalt/index.html
+++ b/sd-karteninhalt/index.html
@@ -150,9 +150,11 @@
 				var minuten_seit_fehler = Math.round((new Date().getTime() - zeit_des_ersten_fehlers) / 1000 / 60);
 				document.getElementById('fehler_seit').innerHTML = minuten_seit_fehler;
 				
-				if(minuten_seit_fehler > 15) {
-					document.location.reload();
-				}
+				/* Deaktiviert, weil Reload nix bringt. Dann besser die Zeitanzeige...
+					if(minuten_seit_fehler > 15) {
+						document.location.reload();
+					}
+				*/
 			} else {
 				document.getElementsByTagName('body')[0].className = "";
 				zeit_des_ersten_fehlers = null;
